# python-chess-json-export-sandbox

./: .gitignore  README.md  pyproject.toml  todo.md
tests/: test_cli.py
your_cli_tool/: cli.py  json_exporter.py
